diagnostic tool and bugfix